--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "email-js": "^2.0.2",
     "emailjs": "^4.0.1",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-responsive": "^9.0.2",
     "react-scripts": "5.0.1",
     "react-whatsapp-widget": "^2.1.0",
     "swiper": "^8.2.4",
